styles/admin-style.css
@import url('https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700&display=swap');
@font-face{font-family:'Material Icons';font-weight:400;font-style:normal;font-display: swap;unicode-range: U+000-5FF;src:url("/icon.woff2") format("woff2")}
body{
    color: #3e4676;
    background-color: #f5f6fa;
    /* background: #ffeee5; */
    /* background: linear-gradient(to top,#fff,#ffeee5 70%); */
}
h1, h2, h3, h4, h5, h6 {
    margin-top: 0px;
}
h1, h2, h3, h4, h5, h6, p, a, span, li, label, tr, td, a, article, aside, details, figcaption, figure, footer, header, hgroup, main, menu, nav, summary, input, textarea, select{font-family: 'Poppins', sans-serif;}
ul{padding: 0px;margin: 0px;}
li{list-style-type: none;}
/* fallback */


.material-icons {
    font-family: 'Material Icons';
    font-weight: normal;
    font-style: normal;
    font-size: 24px;
    line-height: 1;
    letter-spacing: normal;
    text-transform: none;
    display: inline-block;
    white-space: nowrap;
    word-wrap: normal;
    direction: ltr;
    -webkit-font-feature-settings: 'liga';
    -webkit-font-smoothing: antialiased;
}
:before{
    font-family: "Material Icons";
    position: absolute;
    font-size: 18px;
    color: #929eac;
    font-weight: 500;
}
:after{
    font-family: "Material Icons";
    position: absolute;
    font-size: 18px;
    color: #6a717f;
    font-weight: 500
}
a {
    -webkit-transition: all 0.5s ease;
    -moz-transition: all 0.5s ease;
    -o-transition: all 0.5s ease;
    transition: all 0.5s ease;text-decoration: none;
}
a:hover {
    -webkit-transition: all 0.5s ease;
    -moz-transition: all 0.5s ease;
    -o-transition: all 0.5s ease;
    transition: all 0.5s ease;text-decoration: none;
}
::-webkit-scrollbar {
    width: 0px;
}

/* Track */
::-webkit-scrollbar-track {
    background: #f1f1f1;
}

/* Handle */
::-webkit-scrollbar-thumb {
    background: #888;
}

/* Handle on hover */
::-webkit-scrollbar-thumb:hover {
    background: #555;
}
.ic-pho:before{content: "local_phone";}
.ic-eml:before{content: "mail";}
.ic-web:before{content: "language";}
.ic-map:before{content: "location_on";}
.ic-pho:before{content: "person";}

/*-------------------------------------------------*/
/* = HOME PAGE BANNER AND SEARCH BOX
/*-------------------------------------------------*/
.menu{}
.menu i{
    width: 32px;
    height: 32px;
    text-align: center;
    cursor: pointer;
    position: absolute;
    top: 6px;
    padding-top: 3px;
    border-radius: 50px;
    box-shadow: 0 0 0 rgb(76, 175, 80);
    animation: pulse 1.5s infinite;
    background: #1174e8;
    color: #fff;
    /* border: 1px solid #f0eec2; */
}
.menu .mopen{
    display: none;
}
.topnav{
    transition: all 0.5s ease;
    padding: 5px 2%;
    position: fixed;
    top: 0px;
    z-index: 20;
    width: 100%;
    background: #0e3141;
    box-shadow: 0px 1px 16px -8px rgba(42, 42, 42, 0.8);
}
.pulse {
    box-shadow: 0 0 0 rgba(204,169,44, 0.4);
    animation: pulse 1.5s infinite;
}
.pulse:hover {
    animation: none;
}

@-webkit-keyframes pulse {
    0% {
        -webkit-box-shadow: 0 0 0 0 rgba(204,169,44, 0.4);
    }
    70% {
        -webkit-box-shadow: 0 0 0 15px rgba(204,169,44, 0);
    }
    100% {
        -webkit-box-shadow: 0 0 0 0 rgba(204,169,44, 0);
    }
}
@keyframes pulse {
    0% {
        -moz-box-shadow: 0 0 0 0 rgba(204,169,44, 0.4);
        box-shadow: 0 0 0 0 rgba(204,169,44, 0.4);
    }
    70% {
        -moz-box-shadow: 0 0 0 15px rgba(204,169,44, 0);
        box-shadow: 0 0 0 15px rgba(204,169,44, 0);
    }
    100% {
        -moz-box-shadow: 0 0 0 0 rgba(204,169,44, 0);
        box-shadow: 0 0 0 0 rgba(204,169,44, 0);
    }
}
.topnav div{float:left;}
.head-s1{
    width: 20%;
    position: relative;
}
.head-s1 .logo{
    padding-left: 55px;
}
.head-s1 .logo img{
    width: 175px;
    padding-top: 9px;
    object-fit: cover;
    /* filter: invert(1); */
}
.head-s2{
    width: 60%;
    /* display: none; */
}
.head-sear{
    width: 60%;
    /* padding: 0 20px 0 0; */
    margin: 0 auto;
    display: table;
    float: initial !important;
    position: relative;
}
.head-sear:before{
    content: "search";
    margin: 8px 0px 0px 25px;
    font-size: 20px;
}
.head-sear input{
    width: 100%;
    height: 34px;
    border: 0px;
    font-size: 14px;
    padding-left: 60px;
    background: #074460;
    border-radius: 30px;
    margin-top: 4px;
    color: #b9c6dc;
}
.head-s3{
    width: 20%;
    float: right !important;
}
.head-pro {
    padding: 3px 0px 3px 0px;
    display: inline-block;
    width: 142px;
    position:relative;
}
.head-pro img {
    width: 36px;
    height: 36px;
    border-radius: 50%;
    object-fit: cover;
    float: left;
    margin-right: 10px;
}
.head-pro b {
    padding: 0px;
    font-size: 11px;
    font-weight: 400;
    color: #848b9b;
    line-height: 15px;
    float: left;
}
.head-pro h4 {
    margin: 0px;
    font-size: 13px;
    /* float: left; */
    line-height: 15px;
    text-overflow: ellipsis;
    white-space: pre;
    overflow: hidden;
    margin-top: -7px;
    color: #d0d6e0;
}
.fclick {
    position: absolute;
    cursor: pointer;
    left: 0px;
    right: 0px;
    top: 0px;
    bottom: 0px;
    z-index: 5;
}

.ad-menu ul li:before{/* content:''; */left: 20px;top: 5px;z-index: 1;color: #7a7f84;}
.ic-db:before{content:'dashboard';}
.ic-user:before{content:'people';}
.ic-li:before{content:'layers';}
.ic-eve:before{content:'event_note';}
.ic-blo:before{content:'rss_feed';}
.ic-cat:before{content:'apps';}
.ic-enq:before{content:'chat_bubble_outline';}
.ic-pag:before{content:'mail_outline';}
.ic-rev:before{content:'star_half';}
.ic-febk:before{content:'feedback';}
.ic-noti:before{content:'notifications_none';}
.ic-ads:before{content:'brightness_auto';}
.ic-pri:before{content:'monetization_on';}
.ic-imp:before{content:'import_export';}
.ic-set:before{content:'settings';}
.ic-fot:before{content:'link';}
.ic-pay:before{content:'payment';}
.ic-hom:before{content:'home';}
/* ... */

